# nova

./: .env.example  .gitignore  DESIGN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: factory.py
backend/app/adapters/db/: repositories.py
backend/app/adapters/llm/: mock.py  openai.py
backend/app/adapters/stt/: mock.py
backend/app/adapters/tts/: mock.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routers/: auth.py  conversations.py  health.py  memory.py  oauth.py  users.py  voice.py
backend/app/api/ws/: voice.py
backend/app/core/: config.py  container.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/models/: __init__.py  chat.py  conversation.py  memory.py  user.py
backend/app/domain/ports/: __init__.py  providers.py  repositories.py
backend/app/services/: auth.py  conversation.py  memory.py  voice.py
backend/tests/: conftest.py  test_auth.py  test_conversations.py  test_memory_and_users.py  test_voice.py
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: AIOrb.tsx  AuthForm.tsx  ChatPanel.tsx  GlassCard.tsx  MicButton.tsx  Sidebar.tsx  ThemeToggle.tsx  Waveform.tsx
frontend/lib/: api.ts  config.ts  speech.ts  store.ts  types.ts  useVoice.ts
(+4 files in other folders)
